Use VisualStudio platform toolset name as dist file name fragment

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -690,10 +690,7 @@ string(TIMESTAMP DIST_TS "%Y-%m-%d" UTC)
 
 set(DIST_TOOLSET ${CMAKE_CXX_COMPILER_ID})
 if(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
-    string(REPLACE "." ";" _VERSION ${CMAKE_CXX_COMPILER_VERSION})
-    list(GET ${_VERSION} 0 1 _VERSION)
-    string(REPLACE ";" "." _VERSION "${_VERSION}")
-    set(DIST_TOOLSET ${DIST_TOOLSET}-${_VERSION})
+    set(DIST_TOOLSET ${DIST_TOOLSET}-${MAKE_VS_PLATFORM_TOOLSET})
 endif()
 
 if(WIN32)
