Reduce default verbosity of AppVeyor build

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,7 +16,7 @@ build_script:
   - mkdir build
   - cd build
   - cmake -G "Visual Studio 12" ..
-  - cmake --build . --config RelWithDebInfo -- /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
+  - cmake --build . --config RelWithDebInfo -- /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll" /verbosity:minimal
 artifacts:
   - name: FreeOrionSDK_Package
     path: build\FreeOrionSDK_*.zip
