--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,9 +14,9 @@ before_build:
   # Remove the VS Xamarin targets to reduce AppVeyor specific noise in build
   # logs.  See also http://help.appveyor.com/discussions/problems/4569
   - del "C:\Program Files (x86)\MSBuild\12.0\Microsoft.Common.targets\ImportAfter\Xamarin.Common.targets"
-build_script:
-  - mkdir build
+  - if not exist build\NUL mkdir build
   - cd build
+build_script:
   - cmake -G "Visual Studio 12" ..
   - cmake --build . --config RelWithDebInfo -- /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll" /verbosity:minimal
 test: off
