Let Python search its dependencies in the INSTALL folder first

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -265,12 +265,13 @@ ExternalProject_Add(python
         ${CMAKE_COMMAND} -E copy_directory ${PYTHON_CMAKE_SOURCE_DIR}/cmake/ <SOURCE_DIR>/cmake/
     CMAKE_ARGS
         -DCMAKE_INSTALL_PREFIX=<INSTALL_DIR>
-        -DBUILD_LIBPYTHON_SHARED=${BUILD_SHARED_LIBS}
         -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
         -DCMAKE_VERBOSE_MAKEFILE=${CMAKE_VERBOSE_MAKEFILE}
         -DCMAKE_OSX_DEPLOYMENT_TARGET=${CMAKE_OSX_DEPLOYMENT_TARGET}
         -DCMAKE_OSX_ARCHITECTURES=${CMAKE_OSX_ARCHITECTURES}
         -DCMAKE_INSTALL_MESSAGE=${CMAKE_INSTALL_MESSAGE}
+        -DCMAKE_PREFIX_PATH=<INSTALL_DIR>
+        -DBUILD_LIBPYTHON_SHARED=${BUILD_SHARED_LIBS}
         -DPYTHON_VERSION=${PYTHON_VERSION}
         ${PYTHON_CONFIGURE_FLAGS}
         -DDOWNLOAD_SOURCES=OFF
