Disable unused python components
* Disabled unused curses library module.  FreeOrion doesn't use Python
  for any commandline interface.
* Disabled unused dbm database module.  FreeOrion doesn't use any
  database.
* Disabled unused hotshot module.  FreeOrion uses other performance
  measuring libraries.
* Disabled unused json module.  FreeOrion already provides storage
  mechanisms.
* Disabled unused mmap module.  FreeOrion doesn't use memory mapping or
  the multiprocessing module of Python.
* Disabled unused multibytecodecs modules, including modules for various CJK
  codecs.  FreeOrion aims to use UTF-8 anywhere.
* Disabled unused parser module.  FreeOrion doesn't access the Python
  AST.
* Remove commented out 'disable' config settings for low-level APIs as nt and
  posix sytem access.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -280,36 +280,32 @@ ExternalProject_Add(python
         -DENABLE_AUDIOOP=OFF
         -DENABLE_BSDDB=OFF
         #DENABLE_BZ2=OFF
-        #DENABLE_CODECS_CN=OFF
-        #DENABLE_CODECS_HK=OFF
-        #DENABLE_CODECS_ISO2022=OFF
-        #DENABLE_CODECS_JP=OFF
-        #DENABLE_CODECS_KR=OFF
+        -DENABLE_CODECS_CN=OFF
+        -DENABLE_CODECS_HK=OFF
+        -DENABLE_CODECS_ISO2022=OFF
+        -DENABLE_CODECS_JP=OFF
+        -DENABLE_CODECS_KR=OFF
         #DENABLE_CODECS=OFF
-        #DENABLE_CODECS_TW=OFF
+        -DENABLE_CODECS_TW=OFF
         #DENABLE_CRYPT=OFF
         -DENABLE_CSV=OFF
         -DENABLE_CTYPES_TEST=OFF
-        #DENABLE_CURSES=OFF
-        #DENABLE_CURSES_PANEL=OFF
-        #DENABLE_DBM=OFF
+        -DENABLE_CURSES=OFF
+        -DENABLE_CURSES_PANEL=OFF
+        -DENABLE_DBM=OFF
         -DENABLE_ELEMENTTREE=OFF
-        #DENABLE_FCNTL=OFF
         -DENABLE_GDBM=OFF
         -DENABLE_GRP=OFF
         #DENABLE_HASHLIB=OFF
-        #DENABLE_HEAPQ=OFF
-        #DENABLE_HOTSHOT=OFF
-        #DENABLE_JSON=OFF
+        -DENABLE_HOTSHOT=OFF
+        -DENABLE_JSON=OFF
         -DENABLE_LINUXAUDIODEV=OFF
-        #DENABLE_MMAP=OFF
-        #DENABLE_MULTIBYTECODEC=OFF
+        -DENABLE_MMAP=OFF
+        -DENABLE_MULTIBYTECODEC=OFF
         -DENABLE_MULTIPROCESSING=OFF
         -DENABLE_NIS=OFF
-        #DENABLE_NT=OFF
         -DENABLE_OSSAUDIODEV=OFF
-        #DENABLE_PARSER=OFF
-        #DENABLE_POSIX=OFF
+        -DENABLE_PARSER=OFF
         -DENABLE_PWD=OFF
         -DENABLE_PYEXPAT=OFF
         #DENABLE_READLINE=OFF
