Set the MacOSX platform SDK for the Travis-CI build
This removes a warning when CMake tries to select the 10.7 SDK but only
finds the compatible 10.10 SDK.

[skip appveyor]

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_script:
   - mkdir -p build
   - cd build
 script:
-  - cmake -G "Xcode" ..
+  - cmake -G "Xcode" -DCMAKE_OSX_SYSROOT=/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.10.sdk ..
   - travis_wait_transparent 70 cmake --build . --config RelWithDebInfo
 deploy:
   provider: releases
